@startuml
title SO DO LOP 3 TANG - XU LY THANH TOAN HOP DONG
top to bottom direction
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 75
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam classBorderColor #7F8C8D

package "TANG GIAO DIEN" as GUI_LAYER #EDF9EC {
  class MHXuLyThanhToanHopDong #BFE8BA {
    - txtTimKiemHopDong: TextBox
    - grvHopDongChoThanhToan: GridView
    - pnlChiTietThanhToan: Panel
    - lblMaHopDong: Label
    - lblHoTenKhachHang: Label
    - lblPhong: Label
    - lblNgayBatDau: Label
    - lblTienThueKyDau: Label
    - grvDichVuHopDong: GridView
    - lblTongTien: Label
    - lstPhuongThucThanhToan: ListBox
    - uplMinhChung: FileUpload
    - btnXacNhanThuTien: Button
    - dlgXacNhanThuTien: AlertDialog
    --
    + taiDanhSach()
    + chonHopDong(maHD: String)
    + xacNhanThuTien()
  }
}
package "TANG NGHIEP VU" as BUS_LAYER #FFF9E6 {
  class XuLyThanhToanHopDong #F4E3A2 {
    + LayDSChoThanhToan(): IReadOnlyList<HopDong>
    + LayChiTietThanhToan(maHD: String): Object
    + TienHanhThuTien(maHD: String, phuongThuc: String, anhMinhChung: String, maNV: String): PhieuThu
  }
  class HopDong #F4E3A2 {
    + LayDanhSachChoThanhToan(): IReadOnlyList<HopDong>
    + DocChiTiet(maHD: String): HopDong
    + KiemTraChoThanhToan()
    + CapNhatTrangThaiChoBanGiao(maHD: String)
  }
  class DichVuHopDong #F4E3A2 {
    + LayDanhSachTheoHopDong(maHD: String): IReadOnlyList<DichVuHopDong>
  }
  class HoaDon #F4E3A2 {
    + KiemTraChuaCoHoaDonKyDau(maHD: String): Boolean
    + TaoHoaDonKyDauDaThanhToan(maHD: String, tongTien: Decimal, maNV: String, ngayLap: DateTime, dsChiTiet: IReadOnlyList<ChiTietHoaDon>): HoaDon
  }
  class ChiTietHoaDon #F4E3A2 {
    + TaoDongTienThueKyDau(maHoaDon: String, stt: Integer, donGia: Decimal, soLuong: Integer): ChiTietHoaDon
    + TaoDongDichVu(maHoaDon: String, dichVus: IReadOnlyList<DichVuHopDong>, sttBatDau: Integer): List<ChiTietHoaDon>
    + LuuDanhSachChiTietHoaDon(dsChiTiet: IReadOnlyList<ChiTietHoaDon>)
  }
  class PhieuThu #F4E3A2 {
    + TaoPhieuThuTienHoaDon(maHoaDon: String, soTien: Decimal, phuongThuc: String, anhMinhChung: String, maNV: String, thoiDiem: DateTime): PhieuThu
    + LuuPhieu()
  }
}
package "TANG TRUY CAP DU LIEU" as DAL_LAYER #EDF6FC {
  class HopDongDB #BFDCF0 {
    + LayDanhSachChoThanhToan(): IReadOnlyList<HopDong>
    + DocChiTiet(maHD: String): HopDong
    + UpdateTrangThai(maHD: String, trangThai: String): Boolean
  }
  class DichVuHopDongDB #BFDCF0 {
    + LayDanhSachTheoHopDong(maHD: String): IReadOnlyList<DichVuHopDong>
  }
  class HoaDonDB #BFDCF0 {
    + ExistsHoaDonKyDau(maHD: String): Boolean
    + Insert(hoaDon: HoaDon)
  }
  class ChiTietHoaDonDB #BFDCF0 {
    + InsertBatch(dsChiTiet: IReadOnlyList<ChiTietHoaDon>)
  }
  class PhieuThuDB #BFDCF0 {
    + InsertPhieuThu(phieuThu: PhieuThu)
  }
}

GUI_LAYER -[hidden]down- BUS_LAYER
BUS_LAYER -[hidden]down- DAL_LAYER
PhieuThu -[hidden]down- HoaDonDB
MHXuLyThanhToanHopDong o-down- XuLyThanhToanHopDong
XuLyThanhToanHopDong o-- HopDong
XuLyThanhToanHopDong o-- DichVuHopDong
XuLyThanhToanHopDong o-- HoaDon
XuLyThanhToanHopDong o-- ChiTietHoaDon
XuLyThanhToanHopDong o-- PhieuThu
HopDong o-down- HopDongDB
DichVuHopDong o-down- DichVuHopDongDB
HoaDon o-down- HoaDonDB
ChiTietHoaDon o-down- ChiTietHoaDonDB
PhieuThu o-down- PhieuThuDB
@enduml
